<resources>
    <string name="app_name" translatable="false">treff.</string>
    <string name="username_path" translatable="false">org_pispeb_treff_client_username</string>

    <!-- home activity tab titles -->
    <string name="tabtext_events">Events</string>
    <string name="tabtext_map">Map</string>
    <string name="tabtext_contacts">Contacts</string>
    <string name="tabtext_groups">Groups</string>

    <!-- group activity -->
    <string name="tabtext_chat">Chat</string>
    <string name="group_dialog_add">What do you want to add?</string>
    <string name="group_toolbar_add_poll">Create a new poll</string>
    <string name="group_toolbar_add_event">Create a new event</string>


    <!-- navigation drawer -->
        <!-- open/close strings for accessibility -->
        <string name="drawer_open">Open navigation drawer</string>
        <string name="drawer_close">Close navigation drawer</string>
        <!-- actual menu items -->
        <string name="drawer_nav_home">Home</string>
        <string name="drawer_nav_settings">Settings</string>
        <string name="drawer_nav_profile">Profile</string>
        <string name="drawer_nav_about">About us</string>
        <string name="drawer_nav_logout">Log out</string>


    <!-- settings activity -->
    <string name="settings_title">Settings</string>

    <!-- profile activity -->
    <string name="profile_title">Profile</string>

    <!-- about activity -->
    <string name="about_title">About us</string>
    <string name="about_text">
        The Developers:
        \nWe are Tim Schmidt, Lukas Dippon, Fabian Röpke, Simon Vögele, Jens Kienle and Matthias Noll.
        We are students of the Karlsruhe Institute of Technology (KIT) and have developed "treff."
        as a project with the goal of learning how to develop software and work as a team.
        \n
        \nThe App:
        \nOur app "treff." offers you the possibility to manage your events, appointments and
        meetings. It doesn\'t matter if it\'s a cinema visit with your friends, a meeting with
        colleagues or a trip with your family members; with "treff." you can easily decide on
        the location, share your positions on a shared map and meet without any problems.
        \n
        \nOpen Source:
        \nOur source code is publicly available and is licensed under the "GNU Affero General Public License v3.0" (AGPLv3).
        \n
        \nPrivacy:
        \nWe are following the privacy guidelines of the EU.
    </string>

    <!-- login/register -->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_email">Email-Address (optional) </string>
    <string name="login_login">Login</string>
    <string name="login_register">Register</string>
    <string name="login_auth">Authenticating…</string>

    <!--Service description-->
    <string name="gps_service_description" translatable="false">Provides GPS Location for the \"treff.\"-App</string>

    <!-- error codes -->
    <string name="error_errorcode_invalid">Unknown error code</string>
    <string name="error_wrong_parameters">Parameter in wrong format</string>
    <string name="error_unknown_command">Cmd Parameter unknown</string>
    <string name="error_token_inv">Authentication token invalid</string>
    <string name="error_login_inv">Invalid username/password</string>
    <string name="error_pw_reset_inv">Password reset code invalid</string>
    <string name="error_user_id_inv">At least one account ID is invalid</string>
    <string name="error_group_id_inv">Group ID invalid or not part of the group</string>
    <string name="error_event_id_inv">Event ID invalid</string>
    <string name="error_poll_id_inv">Poll ID invalid</string>
    <string name="error_poll_option_id_inv">Poll option ID invalid</string>
    <string name="error_username_used">Username already in use</string>
    <string name="error_email_inv">Email address is invalid</string>
    <string name="error_username_inv">Username is invalid</string>
    <string name="error_end_time_in_past">At least one end time is in the past</string>
    <string name="error_end_before_start">At least one end time is not after the corresponding start time</string>
    <string name="error_measure_in_future">The time of measurement is too far in the future</string>
    <string name="error_already_contact">Account already in contact list</string>
    <string name="error_not_contact">Account is not in contact list</string>
    <string name="error_request_pending">Can\'t add own account to contact list</string>
    <string name="error_no_request">No contact request from specified user</string>
    <string name="error_user_blocked">You\'re blocked</string>
    <string name="error_blocked_by_user">Account on block list</string>
    <string name="error_not_blocked">Account not on block list</string>
    <string name="error_self_block">Can\'t block own account</string>
    <string name="error_no_user_invited">Need to invite at least one other user</string>
    <string name="error_user_already_in_group">At least one account is already part of the group</string>
    <string name="error_user_not_in_group">At least one account is not part of the group</string>
    <string name="error_already_in_event">Already participating</string>
    <string name="error_not_in_event">Not participating</string>
    <string name="error_already_voted">Already voting for this option</string>
    <string name="error_no_multi_choice">Multi-choice is not available for this poll</string>
    <string name="error_not_voted_for">Not voting for this option</string>
    <string name="error_perm_edit_perm">Missing permission to edit permissions</string>
    <string name="error_perm_edit_group">Missing permission to edit the group</string>
    <string name="error_perm_edit_members">Missing permission to edit the list of group members</string>
    <string name="error_perm_create_event">Missing permission to create events in this group</string>
    <string name="error_perm_edit_event">Missing permission to edit the event</string>
    <string name="error_perm_create_poll">Missing permission to create polls in this group</string>
    <string name="error_perm_edit_poll">Missing permission to edit the poll</string>
    <string name="error_invalid_email">Not a valid email-address</string>
    <string name="error_invalid_password">Password too short</string>
    <string name="error_incorrect_password">Password not correct</string>
    <string name="error_field_required">Required field</string>

    <!-- server change -->
    <string name="key_server_address" translatable="false">server_address</string>
    <string name="key_using_default_server" translatable="false">
        using_default_server</string>
    <string name="login_server_address">Server address (empty for
        default)</string>
    <string name="error_cant_connect">Can\'t connect to server</string>

    <!-- TODO more specific comments -->
    <string name="username_contact">Contact\'s Username</string>
    <string name="add_contact">Add contact</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="block">Block</string>
    <string name="private_group">Private Group</string>
    <string name="groupname">Groupname</string>
    <string name="create_group">Create Group</string>
    <string name="poll_or_event">What do you want to add?</string>
    <string name="poll">Poll</string>
    <string name="event">Event</string>
    <string name="leave_group">Leave group</string>
    <string name="event_title">Event Title</string>
    <string name="manage_groups">Manage Groups</string>
    <string name="prompt_email">Email-Address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in or register</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="share_location">Share Location</string>
    <string name="user_is_requesting">Contact Request</string>
    <string name="request_from">Contact Request from </string>
    <string name="request_pending">Request pending</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="username">Username</string>
    <string name="new_password">New password:</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="old_password">Current password</string>
    <string name="save">Save</string>
    <string name="edit_data">Edit data</string>
    <string name="edit_password">Edit password</string>
    <string name="settings_no_email">No email specified</string>
    <string name="channel_name" translatable="false">treff.</string>
    <string name="channel_description" translatable="false">Transmitting location…</string>
    <string name="tap_for_back">Tap to open treff.</string>
    <string name="blocked">Blocked</string>
    <string name="unblock">Unblock</string>
    <string name="error_internal">An internal error occurred, please try again</string>
    <string name="how_long">How long do you want to share your Location?</string>
    <string name="share_location_for">Share Location for</string>
    <string name="cancel_sharing">Cancel sharing your location?</string>
    <string name="error_username_taken">Username already in use</string>
    <string name="error_session">Invalid session</string>
    <string name="kick_user">Kick user!</string>
    <string name="edit_group">Edit</string>
    <string name="missing_password">Please enter a password</string>
    <string name="missing_username">Please enter a username</string>
    <string name="invalid_email">Invalid email</string>
    <string name="username_already_in_use">Username already in use</string>
    <string name="email_already_in_use">Email address already in use</string>
    <string name="button_change_server">Change Server</string>
    <string name="mute_chat_setting">Mute Chat</string>
    <string name="mute_location_requests_settings">Mute location requests</string>
    <string name="flist_accept">Accept</string>
    <string name="flist_decline">Decline</string>
    <string name="flist_cancel_request">Cancel</string>
    <string name="error_api_mismatch">API Mismatch, wrong version?</string>
    <string name="error_server_error">Unknown server error</string>

</resources>
