<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="vm"
            type="org.pispeb.treffpunkt.client.view.profile.ProfileViewModel" />
    </data>


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/toolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:fitsSystemWindows="true"
                android:minHeight="?attr/actionBarSize"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:background="?attr/colorPrimary">
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_padding"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <EditText
                android:id="@+id/usernameinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:text="@={vm.newUsername}"
                android:layout_margin="@dimen/padding_standard"/>

            <EditText
                android:id="@+id/emailinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@={vm.newEmail}"
                android:layout_margin="@dimen/padding_standard"/>

            <EditText
                android:id="@+id/passwordinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:text="@={vm.confirmPassword}"
                android:layout_margin="@dimen/padding_standard"/>

            <Button
                android:id="@+id/savedatabutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:onClick="@{v -> vm.onSaveDataClick()}"
                android:text="@string/save"
                android:textColor="@color/white"
                android:layout_margin="@dimen/padding_standard"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{v -> vm.onCancel()}"
                android:text="@string/cancel"
                android:layout_margin="@dimen/padding_standard"/>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>
